--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
     <body>
         <h1>hola mundo</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
     </body>
 </html>
